--- a/src/stylesheets/partials/_media.sass
+++ b/src/stylesheets/partials/_media.sass
@@ -68,4 +68,4 @@
       @include font-size(40px)
       padding: 10px 50px 0 40px
   .resourcesText
-    font-weight: normal
+    font-weight: 400
